--- a/Practica1.ipynb
+++ b/Practica1.ipynb
@@ -155,7 +155,7 @@
     "explode = (0.1, 0)  # explode 1st slice\n",
     " \n",
     "# Plot\n",
-    "plt.pie(sizes, explode=explode, labels=labels, colors=colors)\n",
+    "plt.pie(sizes, explode=explode, labels=labels, colors=colors, autopc)\n",
     " \n",
     "plt.axis('equal')\n",
     "plt.show()"
