--- a/PracticaNLTK.ipynb
+++ b/PracticaNLTK.ipynb
@@ -25,7 +25,8 @@
     "from nltk.tokenize import sent_tokenize\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.snowball import EnglishStemmer"
    ]
   },
   {
@@ -116,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtengo el un arreglo de palabras utilizando tokenise de nltk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -129,6 +137,7 @@
     }
    ],
    "source": [
+    "# Numero de palabas incluidos en el texto\n",
     "print(len(words))"
    ]
   },
@@ -227,12 +236,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This', 'cowardly', 'abject', 'quite', 'contrary', 'time', 'past', 'overstrained', 'irritable', 'condition', 'verging', 'hypochondria', 'He', 'become', 'completely', 'absorbed', 'isolated', 'fellows', 'dreaded', 'meeting', 'landlady', 'anyone', 'He', 'crushed', 'poverty', 'anxieties', 'position', 'late', 'ceased', 'weigh', 'upon', 'He', 'given', 'attending', 'matters', 'practical', 'importance', 'lost', 'desire', 'Nothing', 'landlady', 'could', 'real', 'terror', 'But', 'stopped', 'stairs', 'forced', 'listen', 'trivial', 'irrelevant', 'gossip', 'pestering', 'demands', 'payment', 'threats', 'complaints', 'rack', 'brains', 'excuses', 'prevaricate', 'lie', 'rather', 'would', 'creep', 'stairs', 'like', 'cat', 'slip', 'unseen']\n"
+      "70\n"
      ]
     }
    ],
    "source": [
-    "print(words)"
+    "print(len(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'coward', 'abject', 'quit', 'contrari', 'time', 'past', 'overstrain', 'irrit', 'condit', 'verg', 'hypochondria', 'he', 'becom', 'complet', 'absorb', 'isol', 'fellow', 'dread', 'meet', 'landladi', 'anyon', 'he', 'crush', 'poverti', 'anxieti', 'posit', 'late', 'ceas', 'weigh', 'upon', 'he', 'given', 'attend', 'matter', 'practic', 'import', 'lost', 'desir', 'noth', 'landladi', 'could', 'real', 'terror', 'but', 'stop', 'stair', 'forc', 'listen', 'trivial', 'irrelev', 'gossip', 'pester', 'demand', 'payment', 'threat', 'complaint', 'rack', 'brain', 'excus', 'prevar', 'lie', 'rather', 'would', 'creep', 'stair', 'like', 'cat', 'slip', 'unseen']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterando palabras para obtener su versión normalizada\n",
+    "est = EnglishStemmer()\n",
+    "\n",
+    "normalized_words = []\n",
+    "\n",
+    "for word in words:\n",
+    "    normalized_words.append(est.stem(word))\n",
+    "    \n",
+    "# Validar palabras unicas\n",
+    "normalized_words = list(normalized_words)\n",
+    "print(normalized_words)"
    ]
   },
   {
